k8s/portal-real/overlays/test/policy-denyall-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: test 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
